# arithmetic-trainer

./: README.md  env.yml  pyproject.toml  train.py  trainer.py
src/: application.py  utils.py
